prevent long words from causing horizontal scroll on mobile. Fixed for headers and links that shouldnt break

--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -10,7 +10,6 @@ body {
     margin: 0;
     padding: 0;
     color: $off-black;
-    word-break: break-all;
 }
 
 .clearfix {
@@ -82,7 +81,9 @@ body {
         width: 50%;
     }
 }
-
+p{
+    word-break: break-all;
+}
 //main site content inside the wrap
 main {
     max-width: $width-max;
